Add descriptions to schemas

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/measurement_chain-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/measurement_chain-1.0.0.yaml
@@ -51,6 +51,8 @@ example:
 
 definitions:
   signal_node:
+    description: |
+      A graph node that represents a measurement signal.
     allOf:
       - tag: "tag:weldx.bam.de:weldx/core/graph/di_node-1.0.0"
       - type: object
@@ -59,6 +61,8 @@ definitions:
             type: object
             properties:
               signal:
+                description: |
+                  The measurement signal
                 tag: "tag:weldx.bam.de:weldx/measurement/signal-1.0.0"
             required: [signal]
           edges:
@@ -69,6 +73,8 @@ definitions:
         required: [attributes]
 
   signal_transform_edge:
+    description: |
+      A graph edge that represents a signal transformation.
     allOf:
       - tag: "tag:weldx.bam.de:weldx/core/graph/di_edge-1.0.0"
       - type: object
@@ -77,8 +83,12 @@ definitions:
             type: object
             properties:
               transformation:
+                description: |
+                  The performed transformation.
                 tag: "tag:weldx.bam.de:weldx/measurement/signal_transformation-1.0.0"
               equipment:
+                description: |
+                  The equipment that performs the transformation
                 tag: "tag:weldx.bam.de:weldx/equipment/generic_equipment-1.0.0"
             required: [transformation]
           target_node:
@@ -91,13 +101,21 @@ definitions:
 type: object
 properties:
   name:
+    description: |
+      The name of the measurement chain.
     type: string
   data_source:
+    description: |
+      The source that generates the first signal and is the first element of the chain.
     tag: "tag:weldx.bam.de:weldx/measurement/source-1.0.0"
-  source_equipment:
-    tag: "tag:weldx.bam.de:weldx/equipment/generic_equipment-1.0.0"
   source_signal:
-     $ref: "#/definitions/signal_node"
+    description: |
+      The initial signal of the measurement chain.
+    $ref: "#/definitions/signal_node"
+  source_equipment:
+    description: |
+            The equipment that produces the source signal.
+    tag: "tag:weldx.bam.de:weldx/equipment/generic_equipment-1.0.0"
 
 
 propertyOrder: [name, data_source, source_signal, source_equipment]
