--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/signal-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/signal-1.0.0.yaml
@@ -24,10 +24,17 @@ examples:
 
 properties:
   signal_type:
+    description: |
+      The type of the signal (analog or digital).
     type: string
+    enum: [analog, digital]
   unit:
+    description: |
+      The unit of the signal (volt, kelvin, etc.).
     type: string
   data:
+    description: |
+      Measurement data that was produced by the signal.
     tag: "tag:weldx.bam.de:weldx/core/time_series-1.0.0"
 
 
