[gha/static_analysis] unpin pydocstyle

--- a/.github/workflows/static_analysis.yml
+++ b/.github/workflows/static_analysis.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           python-version: ${{ matrix.py }}
       - name: pip installs
-        run: pip install pydocstyle==5.*
+        run: pip install pydocstyle
       - name: run pydocstyle
         run: |
           pydocstyle
