do not recurse into doc dir (prevent importing conf.py)

--- a/setup.cfg
+++ b/setup.cfg
@@ -101,6 +101,7 @@ asdf_schema_root = weldx/asdf/schemas
 #asdf_schema_tests_enabled = true
 asdf_schema_skip_tests =
     weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.schema.yaml
+norecursedirs = doc
 
 [isort]
 profile = black
