[gha/build/pypi] test via pyargs (python-path, not file path)
this should circumvent the import conflict of conftest.py

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,7 +118,9 @@ jobs:
       - name: run pytest
         run: |
           pip install pytest pytest-cov pytest-xdist
-          pytest -n2 --dist=loadfile
+          cd /tmp
+          pytest -n2 --dist=loadfile --pyargs weldx
+          cd -
 
       - name: set pypi test repo defaults
         run: |
