cleanup scripts directory. Added entry point for welding_schema

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,8 @@ asdf_extensions =
     weldx = weldx.asdf.extension:WeldxExtension
     weldx-asdf = weldx.asdf.extension:WeldxAsdfExtension
 
+console_scripts =
+    welding_schema = weldx.asdf.cli.welding_schema:main
 
 [flake8]
 # References:
