add entry_points.console_scripts to conda-recipe

--- a/devtools/conda.recipe/meta.yaml
+++ b/devtools/conda.recipe/meta.yaml
@@ -11,7 +11,10 @@ build:
   number: 0
   noarch: python
   script: pip install . -v
-
+  entry_points:
+  {% for e in data['entry_points']['console_scripts'] %}
+    - {{ e }}
+  {% endfor %}
 requirements:
   build:
     - pip
