--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,7 @@ install_requires =
     ipywidgets
     k3d
     meshio
+
 include_package_data = True
 
 [options.extras_require]
@@ -66,6 +67,8 @@ asdf_extensions =
     weldx = weldx.asdf.extension:WeldxExtension
     weldx-asdf = weldx.asdf.extension:WeldxAsdfExtension
 
+console_scripts =
+    welding_schema = weldx.asdf.cli.welding_schema:main
 
 [flake8]
 # References:
@@ -91,7 +94,7 @@ match_dir = [^\.][^\docs].*
 ignore = D203,D213
 
 [tool:pytest]
-addopts = --tb=short --color=yes -rs --cov=weldx --cov-report=term-missing:skip-covered
+addopts = --tb=short --color=yes -rs --cov=weldx --cov-report=term-missing:skip-covered --doctest-modules
 #addopts = --tb=short --color=yes -rs -p no:cov
 # custom test markers, see https://docs.pytest.org/en/latest/example/markers.html#mark-examples
 markers =
@@ -100,6 +103,7 @@ asdf_schema_root = weldx/asdf/schemas
 #asdf_schema_tests_enabled = true
 asdf_schema_skip_tests =
     weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.schema.yaml
+norecursedirs = doc
 
 [isort]
 profile = black
