--- a/doc/rtd_environment.yml
+++ b/doc/rtd_environment.yml
@@ -10,7 +10,7 @@ dependencies:
   - sphinx
   - recommonmark
   - sphinxcontrib-napoleon
-  - nbsphinx
+  - nbsphinx>=0.8.5
   - sphinx-copybutton
   - pydata-sphinx-theme
   - numpydoc>=0.5
