--- a/doc/rtd_environment.yml
+++ b/doc/rtd_environment.yml
@@ -8,7 +8,7 @@ dependencies:
   - ipywidgets
   # documentation
   - sphinx
-  - jinja =2
+  - jinja2=2
   - recommonmark
   - sphinxcontrib-napoleon
   - nbsphinx>=0.8.5
