--- a/doc/rtd_environment.yml
+++ b/doc/rtd_environment.yml
@@ -8,13 +8,15 @@ dependencies:
   - ipywidgets
   # documentation
   - sphinx
+  - jinja2=2
   - recommonmark
   - sphinxcontrib-napoleon
-  - nbsphinx
+  - nbsphinx>=0.8.5
   - sphinx-copybutton
   - pydata-sphinx-theme
   - numpydoc>=0.5
   - sphinx-autodoc-typehints
+  - typing_extensions
   # GH332
   - docutils=0.16
   # pip packages
