[rtd] pin sphinx to major 3
also unpin nbsphinx again, and remove jinja2 (implicit dependency)

--- a/doc/rtd_environment.yml
+++ b/doc/rtd_environment.yml
@@ -7,11 +7,10 @@ dependencies:
   - ipykernel
   - ipywidgets
   # documentation
-  - sphinx
-  - jinja2=2
+  - sphinx=3
   - recommonmark
   - sphinxcontrib-napoleon
-  - nbsphinx>=0.8.5
+  - nbsphinx
   - sphinx-copybutton
   - pydata-sphinx-theme
   - numpydoc>=0.5
