--- a/doc/rtd_environment.yml
+++ b/doc/rtd_environment.yml
@@ -8,6 +8,7 @@ dependencies:
   - ipywidgets
   # documentation
   - sphinx=3
+  - jinja2=2
   - recommonmark
   - sphinxcontrib-napoleon
   - nbsphinx
