--- a/doc/rtd_environment.yml
+++ b/doc/rtd_environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - ipykernel
   - ipywidgets
   # documentation
-  - sphinx=3
+  - sphinx
   - jinja2=2
   - recommonmark
   - sphinxcontrib-napoleon
