--- a/weldx/asdf/schemas/weldx.bam.de/weldx/time/datetimeindex-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/time/datetimeindex-1.0.0.yaml
@@ -22,7 +22,7 @@ definitions:
   values:
     description: |
       Integer representation of a pandas DatetimeIndex in nanoseconds precision.
-    tag: "tag:stsci.edu:asdf/core/ndarray-1.0.0"
+    tag: "tag:stsci.edu:asdf/core/ndarray-1.*"
 
   start:
     description: |
