--- a/weldx/asdf/schemas/weldx.bam.de/weldx/debug/test_shape_validator-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/debug/test_shape_validator-1.0.0.yaml
@@ -29,7 +29,7 @@ properties:
     wx_shape: [1]
 
   quantity:
-    tag: "tag:stsci.edu:asdf/unit/quantity-1.1.0"
+    tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
     wx_shape: [1]
 
   timeseries:
