--- a/weldx/asdf/schemas/weldx.bam.de/weldx/aws/design/base_metal-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/aws/design/base_metal-1.0.0.yaml
@@ -33,7 +33,7 @@ properties:
   thickness:
     description: |
       Plate or sheet thickness, if tube, specifies wall thickness.
-    tag: "tag:stsci.edu:asdf/unit/quantity-1.1.0"
+    tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
 
   diameter:
     description: |
