--- a/weldx/asdf/schemas/weldx.bam.de/weldx/aws/process/gas_component-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/aws/process/gas_component-1.0.0.yaml
@@ -33,7 +33,7 @@ properties:
   gas_percentage:
     description: |
       Percentage by weight this gas occupies of the total gas mixture.
-    tag: "tag:stsci.edu:asdf/unit/quantity-1.1.0"
+    tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
     wx_unit: "percent"
 
 
