--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/rotation-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/rotation-1.0.0.yaml
@@ -94,7 +94,7 @@ oneOf:
       angles:
         description: |
           Rotation angles data.
-        tag: "tag:stsci.edu:asdf/unit/quantity-1.1.0"
+        tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
         wx_unit: "degree"
     required: [sequence, angles]
     flowStyle: block
