--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/error-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/error-1.0.0.yaml
@@ -23,7 +23,7 @@ properties:
       A simple numerical representation of the error.
     oneOf:
       - type: number
-      - tag: "tag:stsci.edu:asdf/unit/quantity-1.1.0"
+      - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
 required: [deviation]
 flowStyle: block
 ...
