63 mc graph backend (#326)
* Add first draft

* Remove most types from new MeasurementChain

* Update features

* Update functions

* Add docstrings

* Add plot function

* Add some tests

* Enhance tests

* Finish most tests

* Remove old test

* Remove old measurement chain

* Update measurement tutorial (asdf serialization fails)

* Fix missing import

* Remove old asdf serialization class

* Remove name from data

* Add interfaces for equipment

* Fix broken test

* Use signal class internally

* clear notebooks

* Move signal type check

* Evaluate function of transformation

* Add getter for equipment

* Update tutorials/measurement_example.ipynb

Co-authored-by: Cagtay Fabry <43667554+CagtayFabry@users.noreply.github.com>

* backup

* Update internal structure

* Update docstrings

* Remove obsolet classes

* Fix pydocstyle and flake8 issues

* Update tests

* Write measurement chain to asdf file

* Read measurement chain from asdf

* Add equipment to schema and tests

* Partially refactor code

* Finish code refactoring

* Start tutorial

* Continue with tutorial

* Clean notebooks

* Finish tutorial

* Fix pydocstyle issues

* Fix flake8 issues

* Partially fix tests

* Remove obsolete function

* Fix a deepsource issue

* Remove example notebooks

* try to fix equality check tests error

* Fix tests

* Update single_pass_weld_example function

* Add missing information to tutorial

* Fix measurement notebook

* Fix flake8 issue

* Remove obsolete function

* Fix documentation

* Fix isort issue

* Fix documentation

* Update changelog

* Fix codacy issue

* Fix deepsource issue

* Add test for equal_unit_dimensionality

* Clean up function ordering

* Remove obsolete file

* Add more tests

* Remove obsolete function

* Fix deepsource issue

* Fix pydocstyle issue

* Rename a class member

* Add more test cases

* Fix asdf t

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/equipment/measurement_equipment-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/equipment/measurement_equipment-1.0.0.yaml
@@ -1,31 +1,26 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "http://weldx.bam.de/schemas/weldx/equipment/generic_equipment-1.0.0"
-tag: "tag:weldx.bam.de:weldx/equipment/generic_equipment-1.0.0"
+id: "http://weldx.bam.de/schemas/weldx/equipment/measurement_equipment-1.0.0"
+tag: "tag:weldx.bam.de:weldx/equipment/measurement_equipment-1.0.0"
 
 title: |
-  A generic piece of equipment.
+  A piece of measurement equipment.
 description: |
-  Generic placeholder class do describe any kind of equipment with additional metadata.
+  This schema describes a piece of measurement equipment that is part of a measurement chain.
   Equipments can be associated with signal sources and data transformations.
 
 examples:
   -
     - A analog to digital conversion equipment with a linear signal transformation.
     - |
-      !<tag:weldx.bam.de:weldx/equipment/generic_equipment-1.0.0>
+      !<tag:weldx.bam.de:weldx/equipment/measurement_equipment-1.0.0>
         name: Beckhoff ELM3002-0000
         sources: []
-        data_transformations:
-        - &id004 !<tag:weldx.bam.de:weldx/measurement/data_transformation-1.0.0>
+        transformations:
+        - &id004 !<tag:weldx.bam.de:weldx/measurement/signal_transformation-1.0.0>
           name: AD conversion current measurement
-          input_signal: !<tag:weldx.bam.de:weldx/measurement/signal-1.0.0>
-              signal_type: analog
-              unit: V
-          output_signal: !<tag:weldx.bam.de:weldx/measurement/signal-1.0.0>
-            signal_type: digital
-            unit: ''
+          type_transformation: AD
           error: !<tag:weldx.bam.de:weldx/measurement/error-1.0.0>
             deviation: !unit/quantity-1.1.0 {unit: percent, value: 0.01}
           func: !<tag:weldx.bam.de:weldx/core/mathematical_expression-1.0.0>
@@ -42,12 +37,12 @@ properties:
     type: array
     items:
       tag: "tag:weldx.bam.de:weldx/measurement/source-1.0.0"
-  data_transformations:
+  transformations:
     type: array
     items:
-      tag: "tag:weldx.bam.de:weldx/measurement/data_transformation-1.0.0"
+      tag: "tag:weldx.bam.de:weldx/measurement/signal_transformation-1.0.0"
 
-propertyOrder: [name, sources, data_transformations]
+propertyOrder: [name, sources, transformations]
 required: [name]
 
 flowStyle: block
