--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-1.0.0.yaml
@@ -115,10 +115,8 @@ properties:
     tag: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
 
 wx_shape:
-  # (coordinates):
-    # data: [(t), 3]
-  (orientations):
-    data: [(t), 3, 3]
+  (coordinates): [..., 3]
+  (orientations): [(t), 3, 3]
 
 propertyOrder: [reference_time, time, orientations, coordinates]
 flowStyle: block
