--- a/setup.cfg
+++ b/setup.cfg
@@ -100,6 +100,7 @@ addopts = --tb=short --color=yes -rs --cov=weldx --cov-report=term-missing:skip-
 #addopts = --tb=short --color=yes -rs -p no:cov
 testpaths =
     weldx/tests
+    weldx/asdf/cli
 # custom test markers, see https://docs.pytest.org/en/latest/example/markers.html#mark-examples
 markers =
     slow: marks tests as slow to run (skipped by default, enable with --runslow option)
