--- a/setup.cfg
+++ b/setup.cfg
@@ -99,8 +99,7 @@ match_dir = [^\.][^\docs].*
 addopts = --tb=short --color=yes -rs --cov=weldx --cov-report=term-missing:skip-covered --doctest-modules
 #addopts = --tb=short --color=yes -rs -p no:cov
 testpaths =
-    weldx/tests
-    weldx/asdf/cli
+    weldx
 # custom test markers, see https://docs.pytest.org/en/latest/example/markers.html#mark-examples
 markers =
     slow: marks tests as slow to run (skipped by default, enable with --runslow option)
