add wx_property_tag to mathematical_expression-1.0.0.yaml

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/mathematical_expression-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/mathematical_expression-1.0.0.yaml
@@ -28,6 +28,7 @@ properties:
     type: string
   parameters:
     type: object
+    wx_property_tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
 
 required: [expression]
 propertyOrder: [expression, parameters]
