swap recommonmark to mayst parser

--- a/doc/rtd_environment.yml
+++ b/doc/rtd_environment.yml
@@ -9,7 +9,7 @@ dependencies:
   # documentation
   - sphinx
   - jinja2=2
-  - recommonmark
+  - myst-parser
   - sphinxcontrib-napoleon
   - nbsphinx
   - sphinx-copybutton
