--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/mathematical_expression-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/mathematical_expression-1.0.0.yaml
@@ -25,9 +25,15 @@ examples:
 type: object
 properties:
   expression:
+    description: |
+      A string representation of the mathematical expression.
+      The expression must conform to the sympy syntax.
     type: string
   parameters:
+    description: |
+      List of constant parameters that to be set in the mathematical expression.
     type: object
+    wx_property_tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
 
 required: [expression]
 propertyOrder: [expression, parameters]
