add test path to pytest config (#405)
* add test path to pytest config

* add weldx/asdf/cli

* use weldx path

* explicitly set schema test path

* update pytest_asdf.yml

--- a/.github/workflows/pytest_asdf.yml
+++ b/.github/workflows/pytest_asdf.yml
@@ -17,6 +17,6 @@ jobs:
       - name: pip installs
         run: |
           pip install -e .[test]
-      - name: run pytest
+      - name: run asdf schema pytest
         run: |
-          pytest --asdf-tests --ignore=weldx/tests/ --no-cov weldx/asdf/schemas
+          pytest --asdf-tests --ignore=weldx/tests/ --no-cov weldx/asdf/schemas/
