--- a/setup.cfg
+++ b/setup.cfg
@@ -98,6 +98,8 @@ match_dir = [^\.][^\docs].*
 [tool:pytest]
 addopts = --tb=short --color=yes -rs --cov=weldx --cov-report=term-missing:skip-covered --doctest-modules
 #addopts = --tb=short --color=yes -rs -p no:cov
+testpaths =
+    weldx
 # custom test markers, see https://docs.pytest.org/en/latest/example/markers.html#mark-examples
 markers =
     slow: marks tests as slow to run (skipped by default, enable with --runslow option)
