--- a/doc/rtd_environment.yml
+++ b/doc/rtd_environment.yml
@@ -7,9 +7,9 @@ dependencies:
   - ipykernel
   - ipywidgets
   # documentation
-  - sphinx
+  - sphinx=4.0
   - jinja2=2
-  - recommonmark
+  - m2r2
   - sphinxcontrib-napoleon
   - nbsphinx
   - sphinx-copybutton
